# Regex-Engine

./: pyproject.toml  readme.md  regex-engine.ipynb
src/regex_engine/: __init__.py  builder.py  engine.py  nfa.py  parser.py
tests/: test_builder.py  test_nfa.py  test_parser.py
